brought in and customized Strongly Typed template

--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@ layout: default
 title: "@techieshark's blog"
 ---
 
-<div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-</div>
+<ul class="divided">
+	{% for post in site.posts %}
+	<li>
+	    <!-- Excerpt -->
+	    <article class="is-excerpt">
+	      <header>
+	        <span class="date">{{ post.date | date_to_string }}</span>
+	        <h3><a href="#">{{ post.title }}</a></h3>
+	      </header>
+	      THIS IS NOT CURRENTLY USED. HMM....
+	    </article>
+	</li>
+	{% endfor %}
+</ul>
