[DOC] added source link

--- a/strongly-typed.html
+++ b/strongly-typed.html
@@ -8,3 +8,5 @@ title: "About this site"
 <a href="http://html5up.net/strongly-typed/">Strongly Typed</a> is a free, fully responsive site template by <a href="http://html5up.net/">HTML5 UP</a>. Free for personal and commercial use under the CCA 3.0 license.
 
 I (<a href="http://github.com/techieshark">@techieshark</a>) ported Strongly Type's vanilla HTML to the <a href="https://github.com/mojombo/jekyll">Jekyll</a> site generator system to learn Jekyll and provide a pretty skin to it that others could use.
+
+Get <a href="http://github.com/techieshark/strongly-typed-jekylled">the source</a>.
